hydroflow_plus/src/snapshots/hydroflow_plus__persist_pushdown__tests__persist_pullup_through_map-2.snap
---
source: hydroflow_plus/src/persist_pushdown.rs
expression: "&optimized.ir"
---
[
    ForEach {
        f: { use crate :: __staged :: persist_pushdown :: tests :: * ; | n | println ! ("{}" , n) },
        input: Persist(
            Map {
                f: { use crate :: __staged :: persist_pushdown :: tests :: * ; | v | v + 1 },
                input: Source {
                    source: Iter(
                        { use crate :: __staged :: persist_pushdown :: tests :: * ; 0 .. 10 },
                    ),
                    produces_delta: false,
                    location_id: 0,
                },
            },
        ),
    },
]
