hydroflow_plus/src/snapshots/hydroflow_plus__persist_pushdown__tests__predicate_pushdown_through_map.snap
---
source: hydroflow_plus/src/persist_pushdown.rs
expression: "&built.ir"
---
[
    ForEach {
        f: { use crate :: __staged :: persist_pushdown :: tests :: * ; | n | println ! ("{}" , n) },
        input: Map {
            f: { use crate :: __staged :: persist_pushdown :: tests :: * ; | v | v + 1 },
            input: Persist(
                Source {
                    source: Iter(
                        { use crate :: __staged :: persist_pushdown :: tests :: * ; 0 .. 10 },
                    ),
                    produces_delta: false,
                    location_id: 0,
                },
            ),
        },
    },
]
